--- a/main.html
+++ b/main.html
@@ -4,24 +4,26 @@
 <head>
   <meta charset="UTF-8"/>
   <title> Club de la Lectura </title>
-  <link rel="shortcut icon" type="image" href="../UYA/img/icon.ico"/>
+  <link rel="shortcut icon" type="image" href="../UyA/img/icon.ico"/>
 
 </head>
 
-    <body background="../UYA/img/fondo.jpeg" style="margin:0;padding:0">
+    <body background="../UyA/img/fondo.jpeg" style="margin:0;padding:0">
       <div class="content">
         <h1 align="center"><em>El club de lectura</em></h1>
-        <img src="../UYA/img/club.jpg" alt="club de lectura" width="100%" height="400px" name="club de lectura" >
+        <img src="../UyA/img/club.jpg" alt="club de lectura" width="100%" height="400px" name="club de lectura" >
         <nav>
             <a href="category.html">Categorias</a> 
             <a href="search_books.html">Buscar libros</a> 
             <a href="news.html">Ver ultimas novedades</a> 
+            <a href="calendario.html">Calendario</a>
+            <a href="recom.html">Recomendacion libros</a>  
             <a href="registro.html">Registrarse</a>
             </nav>
         <h2>Un rincón donde poder hablar de tus libros favoritos</h2>
         <br />
         <p>><strong>Géneros literarios disponibles</strong></p>
-        <ul>
+        <ul>a
             <li><a href="https://www.planetadelibros.com/libros/aventuras/00013/00116" target="_self" rel="external">Aventuras</a></li>
             <li><a href="https://www.planetadelibros.com/?buscar=1&tipo=buscador&texto=ciencia+ficcion" target="_self" rel="external">Ciencia Ficción</a></li>
             <li><a href="https://www.planetadelibros.com/libros/fantasia/00049" target="_self" rel="external">Fantasía</a></li>
@@ -87,6 +89,10 @@
         </div>
     </body>
     <footer>
+      <p><em>
+      Datos de contacto:
+      </em></p>
+
 
     </footer>
 </html>
