--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,7 +9,7 @@
         <header> 
             <h1>
                 <a href="./index.html"> 
-                    <img src="img/club.jpg" alt="club de lectura" width="100%" height="400px" name="club de lectura">
+                    <img src="img/club.jpg" alt="club de lectura" name="club de lectura">
                     <em>El club de lectura</em>
                 </a>
             </h1>
@@ -36,24 +36,24 @@
             <li><a href="https://www.planetadelibros.com/?buscar=1&tipo=buscador&texto=distopica" target="_self" rel="external">Distópica</a></li>
         </ul>
         
-        <h2 align="center"><u>Aventuras</u></h2>
-        <table border="1" width="50%" align="center" summary="Libros de aventura">
-            <thead bgcolor="#FFDAA3">
+        <h2><u>Aventuras</u></h2>
+        <table summary="Libros de aventura">
+            <thead>
                 <tr>
                   <th>Nombre libro</th><th>Autor</th><th>Tematica</th><th>N`de paginas</th><th>Editorial</th>
                 </tr>
               </thead>
-              <tbody bgcolor="#FFDAA3">
-            <tr align="center">
+              <tbody>
+            <tr>
                 <td abbr="nombre del libro">Santuario</td><td abbr="autor del libro">William Faulkner</td><td>Novela literaria</td><td>280</td><td>Austral</td>
             </tr>
-            <tr align="center">
+            <tr>
                 <td>El Señor de los Anillos</td><td>J.R.R. Tolkien</td><td>Fantasia</td><td>1392</td><td>Booket</td>
             </tr>
-            <tr align="center">
+            <tr>
                 <td>El gran Gatsby</td><td>Francis Scott Fitzgerald</td><td>Novela literaria</td><td>218</td><td>Bronce</td>
             </tr>
-            <tr align="center">
+            <tr>
                 <td>La vuelta al mundo en 80 dias</td><td>Jules Verne</td><td>Juvenil</td><td>400</td><td>Austral</td>
             </tr>
             </tbody>
@@ -70,7 +70,7 @@
             </ol>     
             
         <br>
-        <h1 align="center"><u>Registrarse</u></h1>
+        <h1><u>Registrarse</u></h1>
         <form action="" method="post" autocomplete="on" target="_self" name="Registro" enctype="application/x-www-form-urlencoded" align="center">
           <fieldset>
             <legend>Registro</legend>
