--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <a href="./index.html"> 
-                <img src="img/club.jpg" alt="club de lectura" width="100%" height="400px" name="club de lectura">
+                <img src="img/club.jpg" alt="club de lectura" name="club de lectura">
                 <em>El club de lectura</em>
             </a>
         </header>
