--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,7 @@
                <li><a href="novedades.html">Ver Ultimas Novedades</a></li>
                <li><a href="recomendacion.html">Recomendacion de libros</a></li>
                <li><a href="registro.html">Ejemplo</a></li>
+               <li><a href="añadirlibros.html">Añadir Libros</a></li>
                <li><a class="dropdown-trigger" href="#" data-target="dropdown-login">Acceder<i class="material-icons right">adjust</i></a></li>
                <ul id="dropdown1" class="dropdown-content">
                   <li><a href="#!"><i class="material-icons">all_inclusive</i>Login</a></li>
