--- a/web/añadirlibros.html
+++ b/web/añadirlibros.html
@@ -23,7 +23,7 @@
         };
         firebase.initializeApp(config);
         var myDatabase = firebase.database();
-        var refDB = myDatabase.ref('libros');
+        var refDB = myDatabase.ref('brief_history');
         var obj;
         function crear(){
             obj = {
@@ -33,8 +33,9 @@
                 genero: '#genero',
                 isbn: '#isbn'
             }
+            refDB.set(obj); 
         }
-        refDB.set(obj); 
+        
     </script>
     </head>
     <body>
