--- a/web/public/registro.html
+++ b/web/public/registro.html
@@ -8,7 +8,7 @@
       <meta charset="UTF-8"/>
       <link rel="shortcut icon" type="image/x-icon" href="img/icon.ico"/>
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-      <link rel="stylesheet" type="text/css" href="style.css"/>
+      <link rel="stylesheet" type="text/css" href="style/style.css"/>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
       <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
       <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-auth.js"></script>
@@ -141,10 +141,11 @@
          </div>
       </footer>
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script type-'text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+      <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <script src="func.js"></script>
       <script> 
           const Calender = document.querySelector('.datepicker');
           M.Datepicker.init(Calender,{});
+      </script>
    </body> 
 </html>
