--- a/web/public/login.html
+++ b/web/public/login.html
@@ -1,4 +1,4 @@
-html>
+<html>
     <head>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <title>Club de la Lectura</title>
