--- a/web/public/añadirlibros.html
+++ b/web/public/añadirlibros.html
@@ -21,29 +21,7 @@
            storageBucket: "webua1819.appspot.com",
            messagingSenderId: "28657746169"
         };
-        firebase.initializeApp(config);
-        var myDatabase = firebase.database();
-        function crear(){
-         var refDB = myDatabase.ref().child('libros');
-         var refDC = refDB.child(document.getElementById("libro").value);
-         var obj={
-           autor: document.getElementById("nombre").value,
-           age: document.getElementById("agnos").value,
-           genero: document.getElementById("genero").value,
-           isbn: document.getElementById("isbn").value,
-        };
-        refDC.set(obj);
-        }
-        
-        //function crear(){
-          //  obj = {
-            //    autor: '#nombre',
-              //  titulo: '#libro',
-                //año: '#agnos',
-                //genero: '#genero',
-                //isbn: '#isbn'
-            //}
-          
+        firebase.initializeApp(config);    
     </script>
     </head>
     <body>
@@ -77,15 +55,17 @@
         <div class="row">
             <div class="col s4 offset-l4">
                 <form class="formulario" action="index.html" method="post">
-                    <p>Titulo: <input type="text" id="libro"></p>
-                    <p>Autor: <input type="text" id="nombre"></p>
-                    <p>Año: <input type="number" id="agnos"></p>
-                    <p>Genero: <input type="text" id="genero"></p>
-                    <p>ISBN: <input type="text" id="isbn" minlength="13" maxlength="13"></p>
+                    <p>* Titulo: <input type="text" placeholder="El señor de los Anillos" id="libro"  /></p>
+                    <p>* Autor: <input type="text" placeholder="J.R.Tolkien" id="nombre" required /></p>
+                    <p>Año: <input type="number" placeholder="1992" id="agnos"></p>
+                    <p>* Genero: <input type="text" placeholder="Aventuras" id="genero" required /></p>
+                    <p>ISBN: <input type="text" id="isbn" placeholder="1578463A5W16E" minlength="13" maxlength="13"></p>
                     <p>
-                        <input type="submit" onclick="crear()" value="Enviar">
+                        <input type="submit" id="submit" value="Enviar">
                         <input type="reset" value="Borrar">
                     </p>
+                    <br>
+                    <p>Los campos con * son obligatorios</p>
                 </form>
             </div>
         </div>
@@ -127,5 +107,6 @@
               © 2019 Copyright Text
            </div>
         </div>
+        <script type='text/javascript' src="javascript/firebase.js"></script>
      </footer>
 </html>
