--- a/web/public/index.html
+++ b/web/public/index.html
@@ -286,7 +286,7 @@
       </footer>
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-      <script src="javascript/func.js"></script>
+      <script type='text/javascript' src="javascript/func.js"></script>
       <script> 
           const Calender = document.querySelector('.datepicker');
           M.Datepicker.init(Calender,{});
