--- a/web/public/index.html
+++ b/web/public/index.html
@@ -34,14 +34,11 @@
             <ul class="right hide-on-med-and-down">
                <li><a href="novedades.html">Ver Ultimas Novedades</a></li>
                <li><a href="recomendacion.html">Recomendacion de libros</a></li>
-               <li><a href="registro.html">Ejemplo</a></li>
+               <!--<li><a href="registro.html">Ejemplo</a></li>-->
                <li><a href="añadirlibros.html">Añadir Libros</a></li>
-               <li><a class="dropdown-trigger" href="#" data-target="dropdown-login">Acceder<i class="material-icons right">adjust</i></a></li>
-               <ul id="dropdown1" class="dropdown-content">
-                  <li><a href="#!"><i class="material-icons">all_inclusive</i>Login</a></li>
-                  <li><a href="#!"><i class="material-icons">hourglass_empty</i>Registrarse</a></li>
-                </ul>
-                  <li>
+               <li><a href="login.html">Login</a></li>
+               <li><a href="signup.html">Registrarse</a></li>
+               <li>
                   <div class="center row">
                      <div class="col s12 ">
                         <div class="row" id="topbarsearch">
@@ -68,7 +65,7 @@
             <div id="libros-aventura" class="centre row">
                <div class="col s12 m12 l12 xl12">
                   <ul id="libros" class="tabs tab-demo z-depth-1">
-                     <li id="elemento-libro" class="tab"><a href="#ejem1"><img src="img/codigodavinci.jpg"></a><span>Codigo Da Vinci</span></li>
+                     <li id="elemento-libro" class="tab"><a href="codigodavinci.html"><img src="img/codigodavinci.jpg"></a><span>Codigo Da Vinci</span></li>
                      <li id="elemento-libro" class="tab"><a href="#ejem2"><img src="img/desierto.jpg"></a><span>A traves del Desierto</span></li>
                      <li id="elemento-libro" class="tab"><a href="#ejem3"><img src="img/lobodelmar.jpg"></a><span>El lobo del mar</span></li>
                      <li id="elemento-libro" class="tab"><a href="#ejem4"><img src="img/quijote.jpg"></a><span>Don Quijote de la Mancha</span></li>
