--- a/web/public/signup.html
+++ b/web/public/signup.html
@@ -46,7 +46,7 @@
                     <input type="email" id="mail" name="mail">
                     <label for="password">Contraseña</label>
                     <input type="password" id="pass" name="pass">
-                    <button>Enviar</button>
+                    <button onclick="signin()">Enviar</button>
                 </form>
             </div>
         </div>
