--- a/web/public/codigodavinci.html
+++ b/web/public/codigodavinci.html
@@ -53,6 +53,17 @@
                </ul>
          </div>
       </nav>
-      
+      <div class="row">
+          <div class="col s4">
+              <img src="img/codigodavinci.jpg" alt="Smiley face" height="500" width="500">
+          </div>
+          <div class="col s8 offset-s6">
+            <p>Autor: Dan Brown</p>
+            <p>Año:2003</p>
+            <p>Genero:Intriga</p>
+            <p>ISBN:0385504209</p>
+          </div>
+      </div>
+      <a class="waves-effect waves-light btn" href="changebook.html">Change Book</a>
     </body>
 </html>
