--- a/web/public/signup.html
+++ b/web/public/signup.html
@@ -46,14 +46,15 @@
                     <input type="email" id="mail" name="mail">
                     <label for="password">Contraseña</label>
                     <input type="password" id="pass" name="pass">
-                    <button onclick="signin()">Enviar</button>
+                    <button id="signin" onclick="signup()">Enviar</button>
                 </form>
             </div>
         </div>
         
         <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-      <script src="func.js"></script>    
+      <script src="javascript/func.js"></script> 
+      <script src="javascript/auth.js"></script> 
     </body>
     <footer class="page-footer">
             <div class="container">
