--- a/web/public/login.html
+++ b/web/public/login.html
@@ -16,18 +16,17 @@
         <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-firestore.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-messaging.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-functions.js"></script>
-
         <script>
          // Initialize Firebase
-         var config = {
-            apiKey: "AIzaSyCGk645y7ZSl-e1sUHio8DRiN4ytvkMXnU",
-            authDomain: "webua1819.firebaseapp.com",
-            databaseURL: "https://webua1819.firebaseio.com",
-            projectId: "webua1819",
-            storageBucket: "webua1819.appspot.com",
-            messagingSenderId: "28657746169"
-         };
-         firebase.initializeApp(config);
+            var config = {
+                apiKey: "AIzaSyCGk645y7ZSl-e1sUHio8DRiN4ytvkMXnU",
+                authDomain: "webua1819.firebaseapp.com",
+                databaseURL: "https://webua1819.firebaseio.com",
+                projectId: "webua1819",
+                storageBucket: "webua1819.appspot.com",
+                messagingSenderId: "28657746169"
+            };
+            firebase.initializeApp(config);
         </script>
     </head>
     <body>
@@ -61,7 +60,7 @@
         </nav>
         <div class="row">
             <div class="col s4 offset-l4">
-                <form>
+                <form class=formulario method="POST" action="">
                     <label for="name">Nombre</label>
                     <input type="text" id="name" name="name">
                     <label for="surname">1º Apellido</label>
@@ -90,15 +89,15 @@
                             <span>Other</span>
                         </label>
                     </p>
-                    <button id="auth">Enviar</button>
+                    <button id="aut" onclick="register()">Enviar</button>
                 </form>
             </div>
         </div>
         
         <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-      <!--<script type='text/javascript' src="javascript/func.js"></script>
-      <script type='text/javascript' src="javascript/firebase.js"></script> -->
+      <script type='text/javascript' src="javascript/func.js"></script>
+      <script type='text/javascript' src="javascript/firebase.js"></script>
       <script type='text/javascript' src="javascript/auth.js"></script>    
     </body>
     <footer class="page-footer">
