--- a/web/public/index.html
+++ b/web/public/index.html
@@ -12,6 +12,7 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
       <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-app.js"></script>
       <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-auth.js"></script>
       <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-database.js"></script>
       <script>
