--- a/web/public/login.html
+++ b/web/public/login.html
@@ -9,25 +9,9 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
         <link rel="stylesheet" type="text/css" href="style/style.css"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
+        
         <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-database.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-firestore.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-messaging.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-functions.js"></script>
-        <script>
-         // Initialize Firebase
-            var config = {
-                apiKey: "AIzaSyCGk645y7ZSl-e1sUHio8DRiN4ytvkMXnU",
-                authDomain: "webua1819.firebaseapp.com",
-                databaseURL: "https://webua1819.firebaseio.com",
-                projectId: "webua1819",
-                storageBucket: "webua1819.appspot.com",
-                messagingSenderId: "28657746169"
-            };
-            firebase.initializeApp(config);
-        </script>
     </head>
     <body>
         <nav>
@@ -60,12 +44,11 @@
         </nav>
         <div class="row">
             <div class="col s4 offset-l4">
-                <form class=formulario method="POST" action="">
+                <div class=formulario method="POST" action="">
                     <label for="name">Nombre</label>
                     <input type="text" id="name" name="name">
                     <label for="surname">1º Apellido</label>
                     <input type="text" id="surname1" name="surname1">
-
                     <label for="mail">Dirección de correo electrónico</label>
                     <input type="email" id="mail" name="mail" required>
                     <label for="password">Contraseña</label>
@@ -90,14 +73,14 @@
                         </label>
                     </p>
                     <button id="aut" onclick="register()">Enviar</button>
-                </form>
+                </div>
             </div>
         </div>
         
         <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-      <script type='text/javascript' src="javascript/func.js"></script>
-      <script type='text/javascript' src="javascript/firebase.js"></script>
+     <!-- <script type='text/javascript' src="javascript/func.js"></script>-->
+     <!-- <script type='text/javascript' src="javascript/firebase.js"></script>-->
       <script type='text/javascript' src="javascript/auth.js"></script>    
     </body>
     <footer class="page-footer">
