--- a/web/public/signup.html
+++ b/web/public/signup.html
@@ -9,6 +9,8 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
         <link rel="stylesheet" type="text/css" href="style/style.css"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+        <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
     </head>
     <body>
         <nav>
@@ -41,19 +43,19 @@
         </nav>
         <div class="row">
             <div class="col s4 offset-l4">
-                <form>
+                <div>
                     <label for="mail">Dirección de correo electrónico</label>
-                    <input type="email" id="mail" name="mail">
+                    <input type="email" id="mail" name="mail" required>
                     <label for="password">Contraseña</label>
-                    <input type="password" id="pass" name="pass">
-                    <button id="signin" onclick="signup()">Enviar</button>
-                </form>
+                    <input type="password" id="pass" name="pass" required>
+                    <button id="signin" onclick="signin()">Enviar</button>
+                </div>
             </div>
         </div>
         
         <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-      <script src="javascript/func.js"></script> 
+      <!--<script src="javascript/func.js"></script>--> 
       <script src="javascript/auth.js"></script> 
     </body>
     <footer class="page-footer">
