--- a/web/public/añadirlibros.html
+++ b/web/public/añadirlibros.html
@@ -25,33 +25,31 @@
     </script>
     </head>
     <body>
-        <nav>
-            <div class="nav-wrapper">
-               <a href="index.html" class="brand-logo"><img id="logo-pag" src="img/logo-b.png"></img></a>
-               <ul class="right hide-on-med-and-down">
-                  <li><a href="novedades.html">Ver Ultimas Novedades</a></li>
-                  <li><a href="recomendacion.html">Recomendacion de libros</a></li>
-                  <li><a href="registro.html">Ejemplo</a></li>
-                  <li><a class="dropdown-trigger" href="#" data-target="dropdown-login">Acceder<i class="material-icons right">adjust</i></a></li>
-                  <ul id="dropdown1" class="dropdown-content">
-                     <li><a href="#!"><i class="material-icons">all_inclusive</i>Login</a></li>
-                     <li><a href="#!"><i class="material-icons">hourglass_empty</i>Registrarse</a></li>
-                   </ul>
-                     <li>
-                     <div class="center row">
-                        <div class="col s12 ">
-                           <div class="row" id="topbarsearch">
-                              <div class="input-field col s6 s12 red-text">
-                                 <i class="white-text material-icons prefix"></i>
-                                 <input type="text" placeholder="search" id="autocomplete-input" class="autocomplete white-text">
-                              </div>
+      <nav>
+         <div class="nav-wrapper">
+            <a href="index.html" class="brand-logo"><img id="logo-pag" src="img/logo-b.png"></img></a>
+            <ul class="right hide-on-med-and-down" id="barra">
+               <li><a href="novedades.html">Ver Ultimas Novedades</a></li>
+               <li><a href="recomendacion.html">Recomendacion de libros</a></li>
+               <li><a href="añadirlibros.html">Añadir Libros</a></li>
+               <li><a href="login.html">Login</a></li>
+               <li><a href="signup.html">Registrarse</a></li>
+               <li><a href="signup.html">Log Out</a></li>
+               <li>
+                  <div class="center row">
+                     <div class="col s12 ">
+                        <div class="row" id="topbarsearch">
+                           <div class="input-field col s6 s12 red-text">
+                              <i class="white-text material-icons prefix"></i>
+                              <input type="text" placeholder="search" id="autocomplete-input" class="autocomplete white-text">
                            </div>
                         </div>
                      </div>
-                  </li>
-                  </ul>
-            </div>
-        </nav>
+                  </div>
+               </li>
+               </ul>
+         </div>
+      </nav>
         <div class="row">
             <div class="col s4 offset-l4">
                 <form class="formulario" action="añadirlibros.html" method="post">
@@ -120,5 +118,6 @@
            </div>
         </div>
         <script type='text/javascript' src="javascript/firebase.js"></script>
+        <script type='text/javascript' src="javascript/func.js"></script>
      </footer>
 </html>
