--- a/web/public/index.html
+++ b/web/public/index.html
@@ -32,13 +32,13 @@
       <nav>
          <div class="nav-wrapper">
             <a href="index.html" class="brand-logo"><img id="logo-pag" src="img/logo-b.png"></img></a>
-            <ul class="right hide-on-med-and-down">
+            <ul class="right hide-on-med-and-down" id="barra">
                <li><a href="novedades.html">Ver Ultimas Novedades</a></li>
                <li><a href="recomendacion.html">Recomendacion de libros</a></li>
-               <!--<li><a href="registro.html">Ejemplo</a></li>-->
                <li><a href="añadirlibros.html">Añadir Libros</a></li>
                <li><a href="login.html">Login</a></li>
                <li><a href="signup.html">Registrarse</a></li>
+               <li><a href="signup.html">Log Out</a></li>
                <li>
                   <div class="center row">
                      <div class="col s12 ">
