--- a/web/public/login.html
+++ b/web/public/login.html
@@ -12,39 +12,47 @@
         
         <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
+        <script>
+                var config = {
+                    apiKey: "AIzaSyCGk645y7ZSl-e1sUHio8DRiN4ytvkMXnU",
+                    authDomain: "webua1819.firebaseapp.com",
+                    databaseURL: "https://webua1819.firebaseio.com",
+                    projectId: "webua1819",
+                    storageBucket: "webua1819.appspot.com",
+                    messagingSenderId: "28657746169"
+                };
+                firebase.initializeApp(config);
+        </script>
     </head>
     <body>
         <nav>
             <div class="nav-wrapper">
-                <a href="index.html" class="brand-logo"><img id="logo-pag" src="img/logo-b.png"></img></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="novedades.html">Ver Ultimas Novedades</a></li>
-                    <li><a href="recomendacion.html">Recomendacion de libros</a></li>
-                    <li><a href="registro.html">Ejemplo</a></li>
-                    <li><a href="añadirlibros.html">Añadir Libros</a></li>
-                    <li><a class="dropdown-trigger" href="#" data-target="dropdown-login">Acceder<i class="material-icons right">adjust</i></a></li>
-                    <ul id="dropdown1" class="dropdown-content">
-                        <li><a href="#!"><i class="material-icons">all_inclusive</i>Login</a></li>
-                        <li><a href="#!"><i class="material-icons">hourglass_empty</i>Registrarse</a></li>
-                    </ul>
-                    <li>
-                        <div class="center row">
+               <a href="index.html" class="brand-logo"><img id="logo-pag" src="img/logo-b.png"></img></a>
+               <ul class="right hide-on-med-and-down" id="barra">
+                  <li><a href="novedades.html">Ver Ultimas Novedades</a></li>
+                  <li><a href="recomendacion.html">Recomendacion de libros</a></li>
+                  <li><a href="añadirlibros.html">Añadir Libros</a></li>
+                  <li><a href="login.html">Login</a></li>
+                  <li><a href="signup.html">Registrarse</a></li>
+                  <li><a href="signup.html">Log Out</a></li>
+                  <li>
+                     <div class="center row">
                         <div class="col s12 ">
-                            <div class="row" id="topbarsearch">
-                                <div class="input-field col s6 s12 red-text">
-                                    <i class="white-text material-icons prefix"></i>
-                                    <input type="text" placeholder="search" id="autocomplete-input" class="autocomplete white-text">
-                                </div>
-                            </div>
+                           <div class="row" id="topbarsearch">
+                              <div class="input-field col s6 s12 red-text">
+                                 <i class="white-text material-icons prefix"></i>
+                                 <input type="text" placeholder="search" id="autocomplete-input" class="autocomplete white-text">
+                              </div>
+                           </div>
                         </div>
-                        </div>
-                    </li>
-                </ul>
+                     </div>
+                  </li>
+                  </ul>
             </div>
-        </nav>
+         </nav>
         <div class="row">
             <div class="col s4 offset-l4">
-                <div class=formulario method="POST" action="">
+                <div class=formulario method="POST" action="index.html">
                     <label for="name">Nombre</label>
                     <input type="text" id="name" name="name">
                     <label for="surname">1º Apellido</label>
@@ -82,6 +90,7 @@
      <!-- <script type='text/javascript' src="javascript/func.js"></script>-->
      <!-- <script type='text/javascript' src="javascript/firebase.js"></script>-->
       <script type='text/javascript' src="javascript/auth.js"></script>    
+      <script src="javascript/func.js"></script> 
     </body>
     <footer class="page-footer">
             <div class="container">
