--- a/web/public/signup.html
+++ b/web/public/signup.html
@@ -11,39 +11,47 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
+        <script>
+            var config = {
+                apiKey: "AIzaSyCGk645y7ZSl-e1sUHio8DRiN4ytvkMXnU",
+                authDomain: "webua1819.firebaseapp.com",
+                databaseURL: "https://webua1819.firebaseio.com",
+                projectId: "webua1819",
+                storageBucket: "webua1819.appspot.com",
+                messagingSenderId: "28657746169"
+            };
+            firebase.initializeApp(config);
+        </script>
     </head>
     <body>
         <nav>
             <div class="nav-wrapper">
-                <a href="index.html" class="brand-logo"><img id="logo-pag" src="img/logo-b.png"></img></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="novedades.html">Ver Ultimas Novedades</a></li>
-                    <li><a href="recomendacion.html">Recomendacion de libros</a></li>
-                    <li><a href="registro.html">Ejemplo</a></li>
-                    <li><a href="añadirlibros.html">Añadir Libros</a></li>
-                    <li><a class="dropdown-trigger" href="#" data-target="dropdown-login">Acceder<i class="material-icons right">adjust</i></a></li>
-                    <ul id="dropdown1" class="dropdown-content">
-                        <li><a href="#!"><i class="material-icons">all_inclusive</i>Login</a></li>
-                        <li><a href="#!"><i class="material-icons">hourglass_empty</i>Registrarse</a></li>
-                    </ul>
-                    <li>
-                        <div class="center row">
+               <a href="index.html" class="brand-logo"><img id="logo-pag" src="img/logo-b.png"></img></a>
+               <ul class="right hide-on-med-and-down" id="barra">
+                  <li><a href="novedades.html">Ver Ultimas Novedades</a></li>
+                  <li><a href="recomendacion.html">Recomendacion de libros</a></li>
+                  <li><a href="añadirlibros.html">Añadir Libros</a></li>
+                  <li><a href="login.html">Login</a></li>
+                  <li><a href="signup.html">Registrarse</a></li>
+                  <li><a href="signup.html">Log Out</a></li>
+                  <li>
+                     <div class="center row">
                         <div class="col s12 ">
-                            <div class="row" id="topbarsearch">
-                                <div class="input-field col s6 s12 red-text">
-                                    <i class="white-text material-icons prefix"></i>
-                                    <input type="text" placeholder="search" id="autocomplete-input" class="autocomplete white-text">
-                                </div>
-                            </div>
+                           <div class="row" id="topbarsearch">
+                              <div class="input-field col s6 s12 red-text">
+                                 <i class="white-text material-icons prefix"></i>
+                                 <input type="text" placeholder="search" id="autocomplete-input" class="autocomplete white-text">
+                              </div>
+                           </div>
                         </div>
-                        </div>
-                    </li>
-                </ul>
+                     </div>
+                  </li>
+                  </ul>
             </div>
-        </nav>
+         </nav>
         <div class="row">
             <div class="col s4 offset-l4">
-                <div>
+                <div href="index.html" method="POST">
                     <label for="mail">Dirección de correo electrónico</label>
                     <input type="email" id="mail" name="mail" required>
                     <label for="password">Contraseña</label>
@@ -55,8 +63,8 @@
         
         <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-      <!--<script src="javascript/func.js"></script>--> 
       <script src="javascript/auth.js"></script> 
+      <script src="javascript/func.js"></script> 
     </body>
     <footer class="page-footer">
             <div class="container">
