añadiendo alguna etiqueta wai-aria login y registro

--- a/web/public/registro.html
+++ b/web/public/registro.html
@@ -46,7 +46,7 @@
                         <div class="row" id="topbarsearch">
                            <div class="input-field col s6 s12 red-text">
                               <i class="white-text material-icons prefix"></i>
-                              <input type="text" placeholder="search" id="autocomplete-input" class="autocomplete white-text">
+                              <input type="text" aria-labelledby="buscar" placeholder="search" id="autocomplete-input" class="autocomplete white-text">
                            </div>
                         </div>
                      </div>
@@ -60,10 +60,10 @@
             <h1 class="titulo">El club de Lectura</h1>
          </div>
       </div>
-      
-      <div id="registro"> 
+
+      <div id="registro">
         <div class="row">
-         <h1> Formulario Registro</h1> 
+         <h1> Formulario Registro</h1>
          <form class="col s4 offset-s4">
          <div class="row">
             <div class="input-field col s12">
@@ -120,7 +120,7 @@
                   <h5 class="white-text">Contactanos</h5>
                   <ul>
                      <li><a class="grey-text text-lighten-3" href="#!">
-                        <i class="fab fa-twitter"></i>    
+                        <i class="fab fa-twitter"></i>
                         Twitter</a>
                      </li>
                      <li><a class="grey-text text-lighten-3" href="#!">
@@ -143,9 +143,9 @@
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <script src="func.js"></script>
-      <script> 
+      <script>
           const Calender = document.querySelector('.datepicker');
           M.Datepicker.init(Calender,{});
       </script>
-   </body> 
+   </body>
 </html>
