--- a/web/public/login.html
+++ b/web/public/login.html
@@ -32,8 +32,8 @@
                   <li><a href="novedades.html">Ver Ultimas Novedades</a></li>
                   <li><a href="recomendacion.html">Recomendacion de libros</a></li>
                   <li><a href="añadirlibros.html">Añadir Libros</a></li>
-                  <li><a href="login.html">Login</a></li>
-                  <li><a href="signup.html">Registrarse</a></li>
+                  <li><a href="login.html">Log In</a></li>
+                  <li><a href="signup.html">Sign Up</a></li>
                   <li><a href="signup.html">Log Out</a></li>
                   <li>
                      <div class="center row">
