--- a/web/public/index.html
+++ b/web/public/index.html
@@ -29,16 +29,16 @@
       </script>
    </head>
    <body>
-      <nav>
+      <nav role="navigation">
          <div class="nav-wrapper">
             <a href="index.html" class="brand-logo"><img id="logo-pag" src="img/logo-b.png"></img></a>
             <ul class="right hide-on-med-and-down" id="barra">
-               <li><a href="novedades.html">Ver Ultimas Novedades</a></li>
-               <li><a href="recomendacion.html">Recomendacion de libros</a></li>
-               <li><a href="añadirlibros.html">Añadir Libros</a></li>
-               <li><a href="login.html">Login</a></li>
-               <li><a href="signup.html">Registrarse</a></li>
-               <li><a href="signup.html">Log Out</a></li>
+               <li><a href="novedades.html" aria-labelledby="Ultimas Novedades">Ver Ultimas Novedades</a></li>
+               <li><a href="recomendacion.html" aria-labelledby="Recomendación Libros">Recomendacion de libros</a></li>
+               <li><a href="añadirlibros.html" aria-labelledby="Añadir Libros">Añadir Libros</a></li>
+               <li><a href="login.html" aria-label="Crear Cuenta">Log In</a></li>
+               <li><a href="signup.html" aria-label="Iniciar Sesion">Sign Up</a></li>
+               <li><a href="signup.html" aria-label="Cerrar Sesion">Log Out</a></li>
                <li>
                   <div class="center row">
                      <div class="col s12 ">
@@ -54,28 +54,28 @@
                </ul>
          </div>
       </nav>
-      <div id="background" class="center row">
+      <div id="background" class="center row" role="header">
          <div class="col s12 m12 l12 xl12">
-            <h1 class="titulo">El club de Lectura</h1>
+            <h1 class="titulo" aria-label="titulo">El club de Lectura</h1>
          </div>
       </div>
-      <div id="pagina-principal" class="center row">
+      <div id="pagina-principal" class="center row" role="main">
       <div id="row-aventuras" class="center row">
          <div class="col s8 offset-s1 m8 offset-m1 l8 offset-l1 xl8 offset-xl1">
             <h1 class = "titulo-aventura"> Aventuras </h1>
             <div id="libros-aventura" class="centre row">
-               <div class="col s12 m12 l12 xl12">
+               <div class="col s12 m12 l12 xl12" role="list">
                   <ul id="libros" class="tabs tab-demo z-depth-1">
-                     <li id="elemento-libro" class="tab"><a href="codigodavinci.html"><img src="img/codigodavinci.jpg"></a><span>Codigo Da Vinci</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem2"><img src="img/desierto.jpg"></a><span>A traves del Desierto</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem3"><img src="img/lobodelmar.jpg"></a><span>El lobo del mar</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem4"><img src="img/quijote.jpg"></a><span>Don Quijote de la Mancha</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem5"><img src="img/isla_tesoro.jpg"></a><span>La isla del tesoro</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem6"><img src="img/prisionerozenda.jpg"></a><span>El prisionero de Zenda</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/ronin.jpg"></a><span>Ronin</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/caton.jpg"></a><span>El regreso del Caton</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/montecristo.jpeg"></a><span>El conde de Montecristo</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/gulliver.jpeg"></a><span>Los viajes de Gulliver</span></li>
+                     <li id="elemento-libro" class="tab"><a href="codigodavinci.html"><img src="img/codigodavinci.jpg" alt="Codigo da Vinci" role="img"></a><span>Codigo Da Vinci</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem2"><img src="img/desierto.jpg" alt="A traves del desierto" role="img"></a><span>A traves del Desierto</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem3"><img src="img/lobodelmar.jpg" alt="El Lobo del mar" role="img"></a><span>El lobo del mar</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem4"><img src="img/quijote.jpg" alt="Don Quijote de la Mancha" role="img"></a><span>Don Quijote de la Mancha</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem5"><img src="img/isla_tesoro.jpg" alt="La Isla del Tesoro" role="img"></a><span>La isla del tesoro</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem6"><img src="img/prisionerozenda.jpg" alt="El Prisionero de Zenda" role="img"></a><span>El prisionero de Zenda</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/ronin.jpg" alt="Ronin" role="img"></a><span>Ronin</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/caton.jpg" alt="El Regreso del Caton" role="img"></a><span>El regreso del Caton</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/montecristo.jpeg" alt="El Conde de Montecristo" role="img"></a><span>El conde de Montecristo</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/gulliver.jpeg" alt="Los viajes de Gulliver" role="img"></a><span>Los viajes de Gulliver</span></li>
                   </ul>
                </div>
             </div>
@@ -90,7 +90,7 @@
          </div>
          <div class="col s3 m3 l3 xl3">
             <h1 class="categoria"> Categorias </h1>
-            <ul id="categorias" class="collapsible">
+            <ul id="categorias" class="collapsible" role="list">
                <li>
                   <div class="collapsible-header"><i class="fab fa-fort-awesome"></i>Aventura</div>
                   <div class="collapsible-body"><span>La novela de aventuras es un género literario que narra los viajes, el misterio y el riesgo. Una característica recurrente es la acción presente hasta dominar los escenarios, básica para el desarrollo de la trama.</span></div>
@@ -118,18 +118,18 @@
          <div class="col s8 offset-s1 m8 offset-m1 l8 offset-l1 xl8 offset-xl1">
             <h1 class = "titulo-aventura"> Policiaca </h1>
             <div id="libros-policiaca" class="centre row">
-               <div class="col s12 m12 l12 xl12">
+               <div class="col s12 m12 l12 xl12" role="list">
                   <ul id="libros" class="tabs tab-demo z-depth-1">
-                     <li id="elemento-libro" class="tab"><a href="#ejem1"><img src="img/zorro.jpeg"></a><span>Zorro</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem2"><img src="img/espinas.jpeg"></a><span>El lenguaje de espinas</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem3"><img src="img/visitante.jpeg"></a><span>Visitante</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem4"><img src="img/border.jpeg"></a><span>The Border</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem5"><img src="img/falco.jpeg"></a><span>Falco</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem6"><img src="img/pitagora.jpg"></a><span>El asesinato de Pitagoras</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/sakura.jpg"></a><span>Sakura</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/hielo.jpg"></a><span>Te vere bajo el hielo</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/petirrojo.jpg"></a><span>Petirrojo</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/paciente.jpeg"></a><span>El paciente</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem1"><img src="img/zorro.jpeg" alt="Zorro" role="img"></a><span>Zorro</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem2"><img src="img/espinas.jpeg" alt="El lenguaje de espinas" role="img"></a><span>El lenguaje de espinas</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem3"><img src="img/visitante.jpeg" alt="Visitante" role="img"></a><span>Visitante</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem4"><img src="img/border.jpeg" alt="The Border"role="img"></a><span>The Border</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem5"><img src="img/falco.jpeg" alt="Falco" role="img"></a><span>Falco</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem6"><img src="img/pitagora.jpg" alt="El Asesinato de Pitagoras" role="img"></a><span>El asesinato de Pitagoras</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/sakura.jpg" alt="Sakura" role="img"></a><span>Sakura</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/hielo.jpg" alt="Te vere bajo el hielo" role="img"></a><span>Te vere bajo el hielo</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/petirrojo.jpg" alt="Pelirrojo" role="img"></a><span>Petirrojo</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7"><img src="img/paciente.jpeg" alt="El Paciente" role="img"></a><span>El paciente</span></li>
                   </ul>
                </div>
             </div>
@@ -164,7 +164,7 @@
                   <div class="col s3 m3 l3 xl3">
                      <div id="libro-nov" class="card">
                         <div class="card-image">
-                           <img src="img/sofia.jpg"></img>
+                           <img src="img/sofia.jpg" alt="Sofia" role="img"></img>
                         </div>
                         <div class="card-content">
                            <p>La anodina vida de Sofía y Daniel cambia radicalmente cuando él recibe una carta anónima en la que se le dice que Sagrario, a la que venera, 
@@ -179,7 +179,7 @@
                   <div class="col s3 m3 l3 xl3">
                      <div class="card">
                         <div class="card-image">
-                           <img id="id-circe" src="img/circe.jpg"></img>
+                           <img id="id-circe" src="img/circe.jpg" alt="circe" role="img"></img>
                         </div>
                         <div class="card-content">
                            <p>En el palacio de Helios, dios del sol y el más poderoso de los titanes, nace una niña. Pero Circe es una niña rara: carece de los poderes de su padre y 
@@ -195,7 +195,7 @@
                   <div class="col s3 m3 l3 xl3">
                      <div class="card">
                         <div class="card-image">
-                           <img id="id-proposito" src="img/proposito.jpg"></img>
+                           <img id="id-proposito" src="img/proposito.jpg" alt="Proposito" role="img"></img>
                         </div>
                         <div class="card-content">
                            <p>Jaime Lorente nos presenta A propósito de tu boca, un poemario que lleva escribiendo desde que iba al colegio. Un texto personal 
@@ -211,7 +211,7 @@
                   <div class="col s3 m3 l3 xl3">
                      <div class="card">
                         <div class="card-image">
-                           <img id="id-frontera" src="img/frontera.jpg"></img>
+                           <img id="id-frontera" src="img/frontera.jpg" alt="Frontera" role="img"></img>
                         </div>
                         <div class="card-content">
                            <p>La guerra ha llegado a casa.
